RESOLVED FIXED23387
AX hierarchy is incorrect when iframes are present
https://bugs.webkit.org/show_bug.cgi?id=23387
Summary AX hierarchy is incorrect when iframes are present
chris fleizach
Reported 2009-01-16 12:18:15 PST
on a page using iframes, the AX hiearchy is incorrect. A scroll area appears twice going down the chain, but only once going up the chain
Attachments
patch to fix AX hierachy (8.49 KB, patch)
2009-01-16 12:21 PST, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2009-01-16 12:21:09 PST
Created attachment 26804 [details] patch to fix AX hierachy
Beth Dakin
Comment 2 2009-01-16 12:47:30 PST
Comment on attachment 26804 [details] patch to fix AX hierachy Looks good! r=me
chris fleizach
Comment 3 2009-01-16 12:52:50 PST
Note You need to log in before you can comment on or make changes to this bug.