Bug 23387: AX hierarchy is incorrect when iframes are present https://bugs.webkit.org/show_bug.cgi?id=23387

AX hierarchy is incorrect when iframes are present



Canonical link: https://commits.webkit.org/32174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39978 268f45cc-cd09-0410-ab3c-d52691b4dbfc