WebKitTools/DumpRenderTree/AccessibilityUIElement.h
@@ -62,6 +62,7 @@ public:
     void getChildren(Vector<AccessibilityUIElement>&);
     AccessibilityUIElement getChildAtIndex(unsigned);
     AccessibilityUIElement titleUIElement();
+    AccessibilityUIElement parentElement();
     
     // Methods - platform-independent implementations
     JSStringRef allAttributes();
