WebKitTools/DumpRenderTree/win/AccessibilityUIElementWin.cpp
@@ -90,7 +90,13 @@ JSStringRef AccessibilityUIElement::attributesOfDocumentLinks()
 {
     return JSStringCreateWithCharacters(0, 0);
 }
+
 AccessibilityUIElement AccessibilityUIElement::titleUIElement()
+{
+    return 0;
+}
+
+AccessibilityUIElement AccessibilityUIElement::parentElement()
 {
     return 0;
 }
